# Software_Assignment

./: .gitignore  NYT_secrets.yml  nyt_assignment.py  nyt_systemconfig.yml  pyproject.toml  setup.py  user_config.yml
