[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nyt_assignment"
version = "0.1.0"
description = "Software package for analyzing NYT articles"
authors = ["Andre Delaney <andre.delaney@gmail.com>"]
dependencies = ["matplotlib", "pyyaml", "requests", "pandas", "wordcloud"]
requires-python = ">=3.11.0"
readme = "README.md"

[tool.poetry.metadata]
license = "MIT"

[project.scripts]
nyt_assignment = "nyt_assignment:nyt_assignment"

[tool.poetry.publish]
repository = "https://github.com/ASDelaney/Software_Assignment.git"


